[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/FinalSelection.gd" type="Script" id=1]
[ext_resource path="res://graphics/pool2.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/Tutorial.tres" type="DynamicFont" id=3]
[ext_resource path="res://objects/Tutorial.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/FadeIn.tscn" type="PackedScene" id=5]

[node name="FinalSelection" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -80.0
margin_right = 143.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label_Lamb" type="Label" parent="VBox"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 286.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.588235, 0.588235, 0.588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Who is the Lamb?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Menu_Lamb" type="MenuButton" parent="VBox"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 286.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "..."
flat = true
align = 1
items = [  ]

[node name="Container" type="Container" parent="VBox"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 94.0
margin_right = 286.0
margin_bottom = 104.0
rect_min_size = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label_Spirit" type="Label" parent="VBox"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 286.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.588235, 0.588235, 0.588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Which spirit is lying?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Menu_Spirit" type="MenuButton" parent="VBox"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 152.0
margin_right = 286.0
margin_bottom = 198.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "..."
flat = true
align = 1
items = [  ]

[node name="Button_Confirm" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 500.0
margin_top = 300.0
margin_right = 629.0
margin_bottom = 346.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Confirm"
flat = true
align = 1

[node name="Tutorial" parent="." instance=ExtResource( 4 )]
slug = "final"
text = "The minute hand on your watch hasn't changed since the last five times you looked at it; the time is approaching. Despite your efforts to remain calm, the enormity of the situation is finally settling on you.

Your members are in their homes, aware of the role that might fall to them. Each of them are ready, should it fall to them; each know that the needs of the creed outweigh their own lives.

More pressing than that is the demand of the spirits. Fail to win their game, and they will surely find new ways of entertaining themselves with you...

It is time to make your decision."

[node name="FadeIn" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Button_Confirm" to="." method="_confirm"]
